# licenta

./: .gitignore  app.py  packages.txt  pyproject.toml  requirements.txt  test_page.py  test_raport.py  test_tf.py
.streamlit/: config.toml
assets/: report-template.html
data/: artificial-data.parquet
database/: __init__.py  config.py  creare_bd.py  dataset_supabase.py  incarcare_dataset.py  modele.py  operatii.py  stocare.py  storage.py  utils.py
dataset/: __init__.py  analizare.py  citire.py  gestionare.py  handle_datasets.py  metadate.py  stocare.py  stocare_locala.py
eda/: __init__.py  categorial.py  color_decorator.py  data.py  eda.py  eda_categorial.py  eda_general.py  eda_numeric.py  eda_utils.py  general.py  numeric.py  text.py
ml/: __init__.py  comparatie_modele.py  functii.py  hiperparametri.py  metrici.py  model_factory.py  modele.py  modele_utils.py  utils.py
pages/: 0_acasa.py  10_date.py  10_rapoarte.py  10_raport.py  11_date.py  11_docs.py  11_teorie.py  12_docs.py  12_test.py  1_dataset.py  2_eda.py  3_preprocesare.py  3_procesare.py  4_modele.py  5_antrenare.py  5_hiperparametri.py  6_rezultate.py  7_comparatii.py  7_xai.py  8_comparatii.py  8_xai.py  9_predictii.py  9_raport.py
preprocessing/: __init__.py  preprocesare.py  procesare.py
report/: __init__.py  conversii.py  generare.py  pregatire_date.py  sablon.py  style.css  template.html
storage/: __init__.py  model.py  raport.py  set_date.py
ui/: __init__.py  constants.py  decorators.py  nav_bar.py  utils.py
utils/: __init__.py  comparatie_modele.py  date_temp.py  nav_bar.py  (+2 more)
(+14 files in other folders)
