[tool.ruff]
line-length = 120
lint.select = ["I","W292"]
# lint.select = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
